# learnopengl_ibl_example

./: .gitmodules  2.1.2.irradiance_convolution.fs  2.1.2.pbr.fs  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/learnopengl/: camera.h  model.h
